--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "winwin"
-version = "0.0.11"
+version = "0.0.12"
 edition = "2021"
 license = "MIT"
 description = "windows windowing"
 repository = "https://github.com/nxcy/winwin"
+
+[dependencies]
+raw-window-handle = "0.6.2"
 
 [dependencies.windows]
 version = "0.56.0"
